<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">FragDemo</string>
  <string name="action_settings">Settings</string>
  <string name="hello_world">Hello world!</string>

  <string name="about_label_board">Device Board</string>
  <string name="about_label_brand">Device Brand</string>
  <string name="about_label_name">Device Name</string>
  <string name="about_label_manufacturer">Device Manufacturer</string>
  <string name="about_label_model">Device Model</string>
  <string name="about_label_product">Device Product</string>
  <string name="about_label_unknown">Unknown</string>

  <string name="alert_delete_message">Delete Message</string>
  <string name="alert_delete_no">No</string>
  <string name="alert_delete_title">Delete Title</string>
  <string name="alert_delete_yes">Yes</string>

  <string name="button_cancel">Cancel</string>
  <string name="button_save">Save</string>

  <string name="detail_label_state">State</string>
  <string name="detail_label_unknown">Unknown</string>

  <string name="dialog_busy_cancel">Dialog Busy Cancel Title</string>

  <string name="hint_comment">Comment</string>

  <string name="label_fragment_one">Fragment One</string>
  <string name="label_fragment_two">Fragment Two</string>
  <string name="label_fragment_three">Fragment Three</string>
  <string name="label_fragment_four">Fragment Four</string>
  <string name="label_fragment_five">Fragment Five</string>

  <string name="label_header_three">Header Three</string>

  <string name="label_no_rows">No Rows</string>

  <string name="label_stub">Stub</string>

  <string name="label_thumbnail_content_description">Thumbnail Content Description</string>

  <string name="menu_application_bar_one">One</string>
  <string name="menu_application_bar_two">Two</string>
  <string name="menu_application_bar_three">Three</string>
  <string name="menu_application_bar_four">Four</string>
  <string name="menu_application_bar_five">Five</string>

  <string name="menu_context_delete">Delete</string>

  <string name="menu_option_about">About</string>
  <string name="menu_option_settings">Settings</string>

  <string name="preference_summary01">Preference Summary 1</string>
  <string name="preference_title01">Preference Title 1</string>

  <string name="preference_summary02">Preference Summary 2</string>
  <string name="preference_title02">Preference Title 2</string>

  <string name="preference_twitter_name">Twitter Name</string>
  <string name="preference_twitter_name_summary">Account Name</string>
  <string name="preference_twitter_name_dialog">Enter Account Name</string>

  <string name="preference_twitter_password">Twitter Password</string>
  <string name="preference_twitter_password_summary">Account Password</string>
  <string name="preference_twitter_password_dialog">Enter Account Password</string>

  <string name="preference_twitter_list">Twitter List</string>
  <string name="preference_twitter_list_summary">List Summary</string>
  <string name="preference_twitter_list_dialog">List Dialog Message</string>

  <string name="preference_checkbox01">CheckBox01</string>
  <string name="preference_checkbox01_summary">CheckBox01 Summary</string>

  <string name="preference_checkbox02">CheckBox02</string>
  <string name="preference_checkbox02_summary">CheckBox02 Summary</string>

  <string name="preference_ringtone">RingTone</string>
  <string name="preference_ringtone_summary">RingTone Summary</string>
</resources>
