<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:title="@string/preference_title01"
    android:summary="@string/preference_summary01">

    <EditTextPreference
      android:key="twitter_name"
      android:title="@string/preference_twitter_name"
      android:summary="@string/preference_twitter_name_summary"
      android:dialogTitle="@string/preference_twitter_name"
      android:dialogMessage="@string/preference_twitter_name_dialog"
      android:defaultValue=""/>

    <EditTextPreference
      android:key="twitter_password"
      android:title="@string/preference_twitter_password"
      android:summary="@string/preference_twitter_password_summary"
      android:dialogTitle="@string/preference_twitter_password"
      android:dialogMessage="@string/preference_twitter_password_dialog"
      android:password="true"
      android:defaultValue=""/>

    <ListPreference
      android:key="twitter_list"
      android:title="@string/preference_twitter_list"
      android:summary="@string/preference_twitter_list_summary"
      android:entries="@array/twitter_option"
      android:entryValues="@array/twitter_option_values"
      android:dialogTitle="@string/preference_twitter_list" />

    <CheckBoxPreference
      android:key="checkbox01"
      android:title="@string/preference_checkbox01"
      android:summary="@string/preference_checkbox01_summary" />

    <CheckBoxPreference
      android:key="checkbox02"
      android:title="@string/preference_checkbox02"
      android:summary="@string/preference_checkbox02_summary" />
  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/preference_title02"
    android:summary="@string/preference_summary02">

    <RingtonePreference
      android:key="ringtone"
      android:title="@string/preference_ringtone"
      android:summary="@string/preference_ringtone_summary" />
  </PreferenceCategory>
</PreferenceScreen>